# zaffre

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
circuits/ownership/: Nargo.toml
circuits/ownership/src/: main.nr
docs/: VERIFIER_VENDORING.md
programs/example/: Cargo.toml  README.md  package-lock.json
programs/example/src/: lib.rs
programs/example/tests/: integration.rs  sunspot_e2e.rs
programs/example/ts/: package-lock.json  package.json  tsconfig.json  zaffre.test.ts
zaffre-anchor/: Cargo.toml
zaffre-anchor/src/: lib.rs  sunspot.rs  validation.rs
zaffre-anchor/tests/: validation.rs
zaffre-core/: Cargo.toml
zaffre-core/src/: encoding.rs  lib.rs  pda.rs  types.rs
zaffre-core/tests/: integration.rs
zaffre-prover/: Cargo.toml
zaffre-prover/src/: commitment.rs  encoding.rs  lib.rs  proof.rs  types.rs
zaffre-prover/tests/: proof_e2e.rs
zaffre-sdk-js/: Cargo.toml  LICENSE  README.md  package.json
zaffre-sdk-js/js/: index.d.ts  index.js
zaffre-sdk-js/src/: lib.rs
