[package]
name = "zaffre-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Pin to exact version for solana-program compatibility
# (curve25519-dalek requires zeroize >=1, <1.4)
zeroize = "=1.3.0"
getrandom.workspace = true
thiserror.workspace = true
solana-program.workspace = true
borsh = "1.0"
