[package]
name = "zaffre-prover"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Off-chain prover for Zaffre unlinkable PDAs"

[dependencies]
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
light-poseidon = "0.2"
sha2 = "0.10"
getrandom = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
num-bigint = "0.4"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
borsh = "1.0"

[dev-dependencies]
