[package]
name = "zaffre-sdk-js"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "WASM/JS bindings for Zaffre unlinkable PDAs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
zaffre-prover = { path = "../zaffre-prover" }

[workspace]
